# hiker-render

./: .gitignore  BUILD_PLAN.md  CHART_PLAN.md  Cargo.toml  DAGRE_PORT.md  README.md  hiker-core-integration.md
chart/src/: lib.rs
diagram/: Cargo.toml
diagram/src/: lib.rs
graph/: Cargo.toml
graph/examples/: anchor_stability.rs  anchor_tangle.rs
graph/src/: force.rs  lib.rs  tangle.rs  tree.rs  vec2.rs
graph/src/layered/: add_border_segments.rs  coordinate_system.rs  engine.rs  graph.rs  greedy_fas.rs  layout.rs  list.rs  normalize.rs  util.rs
graph/src/layered/nesting_graph/: tests.rs
graph/src/layered/order/: add_subgraph_constraints.rs  init_order.rs  resolve_conflicts.rs
graph/src/layered/parent_dummy_chains/: tests.rs
graph/src/layered/position/: mod.rs
graph/src/layered/rank/: feasible_tree.rs  network_simplex.rs  util.rs
graph/src/layered/rank/feasible_tree/: tests.rs
graph/src/layered/util/: tests.rs
hiker-render/: Cargo.toml
hiker-render/chart/: Cargo.toml
hiker-render/examples/: render_math.rs
hiker-render/graph/src/: lib.rs  tree.rs
hiker-render/graph/src/layered/: acyclic.rs  engine.rs  layout.rs  mod.rs  nesting_graph.rs  parent_dummy_chains.rs  types.rs
hiker-render/htmlview/: Cargo.toml
hiker-render/htmlview/examples/: corpus.rs  scroll_profile.rs  scroll_repro.rs  snapshot.rs  viewer.rs
hiker-render/htmlview/src/: lib.rs  paint.rs
hiker-render/htmlview/src/css/: mod.rs  ua.rs  values.rs
hiker-render/htmlview/src/css/stylo/: cascade.rs  element.rs  mod.rs  read.rs
hiker-render/htmlview/src/css/values/: dimension.rs
hiker-render/htmlview/src/layout/: block.rs  boxtree.rs  construct.rs  float.rs  inline.rs  mod.rs  table.rs
hiker-render/htmlview/tests/golden/: align_center.txt  align_justify.txt  bg_color_block.txt  block_explicit_height.txt  block_explicit_width.txt  block_mixed_nesting.txt  block_nested.txt  block_percent_width.txt  block_single.txt  block_width_auto_fills.txt  box_border_all.txt  box_border_sides.txt  box_margin_all.txt  box_padding_all.txt  font_color.txt  font_line_height.txt  font_size_em.txt  font_weight.txt  heading_h1.txt  heading_with_paragraph.txt  img_block.txt  img_explicit_size.txt  inline_anchor_underline.txt  inline_bold_italic.txt  inline_br.txt  inline_mixed_wrap.txt  inline_nested_spans.txt  inline_short_text.txt  inline_wraps.txt  list_mixed.txt  mixed_blockquote.txt  mixed_div_in_p_context.txt  mixed_inline_block.txt  page_card.txt  page_two_column_table.txt  paragraph_pair.txt  size_auto_block.txt  size_min_height.txt  table_borders.txt  table_multi_row_col.txt  (+5 more)
hiker-render/htmlview/tools/: extract-corpus.sh
hiker-render/math/: Cargo.toml
hiker-render/math/examples/: render_math.rs
hiker-render/math/src/math/: box_layout.rs  delim.rs  (+3 more)
hiker-render/mermaid/: Cargo.toml
hiker-render/mermaid/examples/: gallery.rs  render_flowchart.rs
hiker-render/mermaid/src/: architecture.rs  block.rs  c4.rs  class.rs  draw.rs  er.rs  eventmodeling.rs  gantt.rs  gitgraph.rs  info.rs  ishikawa.rs  journey.rs  kanban.rs  label.rs  layout.rs  lib.rs  measure.rs  mindmap.rs  model.rs  packet.rs  parse.rs  pie.rs  quadrant.rs  radar.rs  requirement.rs  rough.rs  sankey.rs  sequence.rs  state.rs  svgutil.rs  theme.rs  timeline.rs  treemap.rs  treeview.rs  venn.rs  wardley.rs  xychart.rs
hiker-render/mermaid/src/c4/: model.rs  parse.rs  render.rs
hiker-render/mermaid/src/class/: model.rs  render.rs
hiker-render/mermaid/src/er/: mod.rs  model.rs  render.rs
hiker-render/mermaid/src/parse/: directives.rs  mod.rs
hiker-render/mermaid/src/sequence/: model.rs  parse.rs  render.rs
hiker-render/mermaid/src/state/: render.rs
hiker-render/src/: font.rs  lib.rs
hiker-render/src/math/: box_layout.rs  color.rs  macros.rs  mod.rs  svg.rs
hiker-render/wavedrom/: Cargo.toml
hiker-render/wavedrom/examples/: gallery.rs  render_wavedrom.rs
hiker-render/wavedrom/src/: bitfield.rs  font.rs  lib.rs  svgutil.rs  timing.rs  wavelane.rs
htmlview/examples/: profile.rs  rasterize_svg.rs  scroll_bench.rs
htmlview/src/: dom.rs  geom.rs  lib.rs
htmlview/src/css/: computed.rs  mod.rs
htmlview/src/layout/: construct.rs  fonts.rs  inline.rs
htmlview/tests/: golden_layout.rs
htmlview/tests/golden/: align_right.txt  bg_nested.txt  block_siblings.txt  box_auto_margin_center.txt  box_margin_collapse_siblings.txt  box_margin_padding_border.txt  box_margin_sides.txt  box_sizing_border_box.txt  font_family_serif.txt  font_size_px.txt  heading_levels.txt  img_no_dims.txt  inline_spans.txt  list_nested.txt  list_ol.txt  list_ol_nested.txt  list_ul.txt  mixed_article_section.txt  page_article.txt  size_max_width.txt  table_basic.txt  table_caption.txt  table_cell_align.txt  table_colspan.txt  table_widths.txt  ws_normal_collapse.txt  ws_pre_with_spaces.txt
math/: Cargo.toml
math/examples/: rasterize.rs  render_math.rs
math/src/: diagram.rs  lib.rs
math/src/math/: macros.rs  mod.rs  svg.rs
math/src/math/box_layout/: delim.rs  parse.rs  radical.rs  tests.rs
math/tests/: golden_svg.rs
mermaid/: Cargo.toml
mermaid/examples/: gallery.rs
mermaid/src/: architecture.rs  block.rs  cynefin.rs  diagram.rs  draw.rs  eventmodeling.rs  font.rs  gantt.rs  gitgraph.rs  ishikawa.rs  kanban.rs  label.rs  layout.rs  lib.rs  measure.rs  model.rs  packet.rs  pie.rs  radar.rs  railroad.rs  requirement.rs  rough.rs  sankey.rs  svgutil.rs  theme.rs  timeline.rs  treemap.rs  xychart.rs
mermaid/src/c4/: mod.rs  render.rs
mermaid/src/class/: layout.rs  mod.rs  parse.rs  render.rs
mermaid/src/er/: parse.rs  render.rs
mermaid/src/parse/: directives.rs  mod.rs  shapes.rs
mermaid/src/sequence/: mod.rs  render.rs
mermaid/src/state/: mod.rs  model.rs  parse.rs  render.rs
mermaid/tests/: golden_svg.rs
projection/: Cargo.toml
projection/examples/: demo.rs  snapshot.rs
projection/examples/common/: mod.rs
projection/src/: complex.rs  geodesic.rs  lib.rs  mobius.rs
references/: ARCHITECTURE.md
wavedrom/: Cargo.toml
wavedrom/src/: assign.rs  bitfield.rs  bricks.rs  diagram.rs  lib.rs  timing.rs
(+30 files in other folders)
