# Workspace of reusable, egui-agnostic renderers (each crate at the root):
#   htmlview  — HTML/CSS renderer (Stylo + our layout/CSS/paint + egui)
#   math      — egui-agnostic LaTeX math engine (→ SVG)
#   graph     — egui-agnostic graph layout (tree/force + dagre port)
#   mermaid   — pure-Rust mermaid diagrams (→ SVG), layout via hiker-graph
#   wavedrom  — pure-Rust WaveDrom timing diagrams (→ SVG)
#   chart     — pure-Rust charts (→ SVG)
#   projection — egui-free hyperbolic/fisheye projection math kernel
#   diagram   — shared render→SVG / syntax-check trait across mermaid/wavedrom/math
[workspace]
members = ["htmlview", "graph", "math", "mermaid", "wavedrom", "chart", "projection", "diagram"]
resolver = "2"
